Integração com MongoDB para histórico

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GEMINI_API_KEY=AIzaSyAaJebfyEGlrqV59doKL8BICzAlQmL5vhQ
+MONGODB_USER=default
+MONGODB_PASSWORD=T9X9nRLQtnXUXH1N
+MONGODB_CLUSTER=cluster.7b0zowy.mongodb.net
